--- a/fixinator.htm
+++ b/fixinator.htm
@@ -166,7 +166,7 @@
         </div>
 
         <div>
-            <label for="layer">Layer (in mm)</label>
+            <label for="layer">Last Printed Layer</label>
             <input type="number" id="layer"><br>
 
             <label for="thickness">Layer Thickness (in mm)</label>
