accept specific filetypes

--- a/fixinator.htm
+++ b/fixinator.htm
@@ -201,7 +201,7 @@
         </div>
 
         <label for="file">GCODE File</label>
-        <input type="file" id="file"><br>
+        <input type="file" id="file" accept=".gcode, .gco, .g, .ufp"><br>
 
         <button id="fixinateBtn">Fixinate</button><br>
 
