--- a/fixinator.htm
+++ b/fixinator.htm
@@ -74,10 +74,12 @@
 
                         // skip comments
                         if (still_searching) {
-                            if (line.startsWith(';')) {
+                            if (line.startsWith(';')) { // keep comments
                                 new_file.push(line);
                             } else if (line.startsWith("G28")) { //DON'T let it home Z!
                                 new_file.push("G28 X Y\n");
+                            } else if (line.startswith( "G204" )) { // remove acceleration change commands.They clutter the code.
+                                return;
                             } else if (line.startsWith("G1") || line.startsWith("G0") || line.startsWith("G3") || line.startsWith( "G2" ) ) { 
                                 // Regex to capture just the Zxx.x height. Index 0 will be the whole thing (Z15.1), 
                                 // 1 will be just the height (15.1). The height is also named, "height". 
@@ -101,7 +103,7 @@
                                         new_file.push(line);
                                         //from here on out, we want to save everything.
                                         still_searching = false;
-                                    } else {
+                                    } else { // delete all move commands before Z height
                                         return;
                                     }
                                 } else {
